[gd_scene load_steps=2 format=3 uid="uid://jddqhggeorhb"]

[ext_resource type="Script" path="res://Dash.gd" id="1_ocuh8"]

[node name="Dash" type="Node"]
script = ExtResource("1_ocuh8")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="instance_timer" type="Timer" parent="."]
wait_time = 0.01

[node name="Ghosts" type="Node" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="instance_timer" to="." method="_on_instance_timer_timeout"]
